[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Actor/Enemy4.gd" type="Script" id=1]
[ext_resource path="res://Assets/Mob/ghost.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.2001, 6.14602 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0.723836, 0.313303 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )
speed = Vector2( 50, 550 )

[node name="ghost" type="Sprite" parent="."]
position = Vector2( -0.407129, -11.6832 )
scale = Vector2( 0.561571, 0.490291 )
texture = ExtResource( 2 )
vframes = 8
hframes = 12
frame = 20

[node name="EHit" type="CollisionShape2D" parent="."]
position = Vector2( -0.240189, -9.10615 )
scale = Vector2( 0.259931, 0.408516 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.247048, -10.0369 )
scale = Vector2( -0.747786, 0.66671 )
process_parent = true
physics_process_parent = true

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 0.164123, -17.2818 )
scale = Vector2( 8.99291, -4.12631 )
space_override = 1
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color( 0.0588235, 0.227451, 1, 1 )
position = Vector2( -0.0758646, -0.760685 )
scale = Vector2( 0.703928, 1.99423 )
shape = SubResource( 2 )

[node name="HurtBox2" type="Area2D" parent="."]
position = Vector2( 0.164123, -17.2818 )
scale = Vector2( 8.99291, -4.12631 )
space_override = 1
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox2"]
modulate = Color( 0.0588235, 0.227451, 1, 1 )
position = Vector2( -0.0304537, -3.17307 )
scale = Vector2( 0.703928, 1.99423 )
shape = SubResource( 2 )

[node name="FireBallTimer" type="Timer" parent="."]
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -0.241847, 20.8326 )
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_entered" from="HurtBox2" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="FireBallTimer" to="." method="_on_FireBallTimer_timeout"]
